Comment out SVG in main navigation
Commented out the SVG code in the brand link.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,13 +20,13 @@
         <nav id="main-nav" class="topbar" style="position: fixed; top: 0; left: 0; right: 0; z-index: 100; transition: all 0.3s ease; padding: 24px 20px; border-bottom: 1px solid transparent;">
             <div style="max-width: 1240px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; width: 100%;">
                 <a class="brand-link" href="/" style="display: flex; align-items: center; gap: 10px; font-size: 1.4rem;">
-                    <svg width="28" height="28" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+                    <!-- <svg width="28" height="28" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
                         <rect width="120" height="120" rx="28" fill="#1d1813" />
                         <rect width="104" height="104" x="8" y="8" rx="20" fill="none" stroke="#6a5d4b" stroke-width="2" opacity="0.3" />
                         <path d="M 82 42 C 82 24, 38 24, 38 42 C 38 56, 82 64, 82 78 C 82 96, 38 96, 38 78" fill="none" stroke="#c99863" stroke-width="16" stroke-linecap="round" />
                         <circle cx="82" cy="42" r="4" fill="#e8dfd2" />
                         <circle cx="38" cy="78" r="4" fill="#e8dfd2" />
-                    </svg>
+                    </svg> -->
                     Sentinel Auth
                 </a>
                 <div class="topbar-links">
