feat: Add global logout button to all navigation bars and implement shared auth utility

--- a/frontend/agent.html
+++ b/frontend/agent.html
@@ -25,6 +25,8 @@
                     <a class="topbar-link" href="/dashboard.html">Keys</a>
                     <a class="topbar-link" href="/documentation/index.html">Documentation</a>
                     <a class="topbar-link topbar-link-active" href="/agent.html">Agent Demo</a>
+                    <a class="topbar-link" href="#" id="logout-btn"
+                        style="color: var(--error, #ef4444); margin-left: auto;">Log Out</a>
                 </div>
             </nav>
 
@@ -98,6 +100,7 @@
         </main>
     </div>
 
+    <script type="module" src="./auth.js"></script>
     <script type="module" src="/agent.js"></script>
     <script type="module" src="/background.js"></script>
 </body>
