--- a/frontend/enterprise.html
+++ b/frontend/enterprise.html
@@ -1019,6 +1019,7 @@
             <a href="/dashboard.html">Keys</a>
             <a href="/documentation/index.html">Documentation</a>
             <a href="/agent.html">Agent Demo</a>
+            <a href="#" id="logout-btn" style="color: var(--ent-red); margin-left: 0.5rem;">Log Out</a>
         </nav>
         <div class="topbar-actions">
             <span id="account-chip">Not signed in</span>
@@ -1188,6 +1189,7 @@
         </main>
     </div>
 
+    <script type="module" src="./auth.js"></script>
     <script type="module" src="./enterprise.js"></script>
     <script type="module" src="./background.js"></script>
 </body>
