Revert "feat: Add global logout button to all navigation bars and implement shared auth utility"
This reverts commit 93f2c24900e8f1ad86b508dcea0a8b97d9555458.

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -25,8 +25,6 @@
                     <a class="topbar-link topbar-link-active" href="/dashboard.html">Keys</a>
                     <a class="topbar-link" href="/documentation/index.html">Documentation</a>
                     <a class="topbar-link" href="/agent.html">Agent Demo</a>
-                    <a class="topbar-link" href="#" id="logout-btn"
-                        style="color: var(--error, #ef4444); margin-left: auto;">Log Out</a>
                 </div>
             </nav>
 
@@ -328,9 +326,8 @@
         </main>
     </div>
 
-    <script src="auth.js"></script>
+    <script type="module" src="/dashboard.js"></script>
     <script type="module" src="/background.js"></script>
-    <script src="dashboard.js"></script>
 </body>
 
 </html>
